fixed signup form sticking out

--- a/react-app/src/components/auth/SignUpForm.module.css
+++ b/react-app/src/components/auth/SignUpForm.module.css
@@ -3,7 +3,8 @@
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 80vh;
+  margin-top: 20px;
+  height: 80%;
 }
 
 .formDiv {
